# vellum

./: .gitignore  AGENTS.md  README.md  flake.nix
actions/: flake.nix
actions/cover_palette/: Cargo.toml  config.toml
actions/cover_palette/src/: kmeans.rs  main.rs
actions/get_lyrics/: main.py
actions/python/embed/: main.py
actions/python/get_lyrics/: main.py
actions/python/rename/: main.py
actions/python/search_cover/: main.py
actions/rust/: Cargo.toml
actions/rust/collect/: Cargo.toml
actions/rust/collect/src/: api.rs  core.rs  fs.rs  main.rs  models.rs
actions/rust/cover_palette/: Cargo.toml
actions/search_cover/: main.py
docs/: IDEAS.md  album.lock.json.spec.md  concept-cabinet.md  concept-library.md  concept.cabinet.md  concept.library.md  concept.shelves.md  feature.actions.md
docs/cli/: vellum.x.md
docs/ideas/: add a way to expose the `filter = __` expression from cabinets a.md  add-fast-modal-drawer-open.md  album.lock.jsonc  api.files.md  api.scripts.md  concept.filters.md  idea.random-order.md  idea.random-sorter.md  random sorter.md  template.album.lock.jsonc  todo.20260613.change-name-sorter-to-order.md  todo.20260613.change-vellum-manifest.md  vellum-interface.md  vellum-run.md
docs/issues/: FIX.md  llm.CONSIDER.md
docs/vellum.lua/: vellum.lua.md  vl.actions.md  vl.compile.{level}.key.md  vl.compiler.covers.md  vl.compiler.keys.md  vl.fn.md  vl.interfaces.md
exp/: todo.md
exp/ideas/: add-.vellum-for-every-registered-album.md  api.scripts.md  colors.toml.md  concept.filters.md  consolidate-shelves-and-home-tab-in-one.md  docs.album.lock.jsonc  random-order.md  system.toml.md  template.album.lock.jsonc  vellum-interface.md  vl.compile.album.info.date_added.md
exp/notes/: lua-config-and-manifest.md
exp/test/palette_extraction/: Cargo.toml  config.toml
exp/test/palette_extraction/src/: config.rs  kmeans.rs  kmeans_msc.rs  kmeans_wn.rs  main.rs  shader_window.rs  simplex.frag
exp/todo/: 20260623.change-logic.toml-attrset.md
exp/xml/: ~-.config-vellum.xml  ~-dev-vellum.xml
interfaces/web-app/: config.toml  index.html  package.json  run.sh  stylelint.config.js  tsconfig.json  vite.config.js
nix/: config.nix  flake.nix  mock.album.nix  packages.nix
rust/: Cargo.toml
rust/libvellum/: Cargo.toml
rust/libvellum/src/: config.rs  error.rs  harvest.rs  lib.rs  models.rs  resolvers.rs  scanner.rs  sentinel.rs  types.rs  utils.rs
rust/libvellum/src/compiler/: manifest.rs  validation.rs
rust/libvellum/src/images/: mod.rs
rust/libvellum/src/lua/: bootstrap.lua  compiler.lua  config.lua  config.rs  core.lua  mod.rs  utils.lua
rust/vellum/: Cargo.toml
rust/vellum/src/: main.rs
rust/vellum/src/compile/: album.rs  assets.rs  build.rs  context.rs  covers.rs  mod.rs  resolvers.rs  stream.rs  tracks.rs  utils.rs
rust/vellum/src/compile/builder/: assets.rs  context.rs  mod.rs
rust/vellum/src/compile/engine/: stream.rs  verify.rs
rust/vellum/src/compile/resolvers/: mod.rs  native.rs  standard.rs
rust/vellum/src/harvest/: mod.rs
rust/vellum/src/interface/: mod.rs
rust/vellum/src/manifest/: compressor.rs  engine.rs  grouper.rs  mod.rs
rust/vellum/src/nix/get/: mod.rs
rust/vellum/src/nix/manifest/: globbing.rs  mod.rs
rust/vellum/src/query/: mod.rs
rust/vellum/src/run/: mod.rs
rust/vellum/src/run/get_lyrics/: api.rs  mod.rs  scraper.rs
rust/vellum/src/server/: mod.rs  state.rs
rust/vellum/src/server/api/: actions.rs  assets.rs  mod.rs  playback.rs  system.rs  websocket.rs
rust/vellum/src/server/inotify/: classifier.rs  handler.rs  mod.rs  watcher.rs
rust/vellum/src/server/mpd/: actor.rs  status.rs
rust/vellum/src/server/query/: logic.toml  mod.rs
rust/vellum/src/server/watchdog/: mod.rs
rust/vellum/src/update/: mod.rs
rust/vellum/src/x/: mod.rs
web-app/: eslint.config.js
web-app/src/: App.svelte  app.css  library.svelte.ts  theme.svelte.ts
(+82 files in other folders)
