[workspace]

members = [
  "libvellum",
  "vellum",
]

resolver = "2"

[workspace.lints.clippy]

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

if_not_else = "allow"
cargo_common_metadata = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
struct_excessive_bools = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
