[package]
name = "libvellum"
version = "0.1.0"
edition = "2024"
description = "Headless core library for Vellum, housing models, config, and pure domain logic."
repository = "https://github.com/lewelove/Vellum"
license = "AGPL-3.0-only"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
anyhow = "1.0"
dirs = "5.0"
toml = { version = "1.0.1", features = ["preserve_order"] }
indexmap = { version = "2.13.0", features = ["serde"] }
lofty = "0.23.2"
log = "0.4.29"
regex = "1.12.3"
image = "0.25.9"
sha2 = "0.10.9"
walkdir = "2.4"
alphanumeric-sort = "1.5.5"
chrono = "0.4.43"
blake3 = "1.8.5"
base64 = "0.22.1"
