[package]
name = "vellum"
version = "0.1.0"
edition = "2024"
description = "Web-based MPD client and library manager that treats albums as compiled data objects"
license = "AGPL-3.0-only"
repository = "https://github.com/lewelove/Vellum"
readme = "../README.md"
keywords = ["mpd", "music", "metadata", "audio", "server"]
categories = ["multimedia::audio"]

[lints]
workspace = true

[[bin]]
name = "vellum"
path = "src/main.rs"

[dependencies]
libvellum = { path = "../libvellum" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features =["derive"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.4"
rayon = "1.8"
anyhow = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
futures = "0.3.31"
base64 = "0.22.1"
simple_logger = "5.1.0"
log = "0.4.29"
toml = { version = "1.0.1", features = ["preserve_order"] }
alphanumeric-sort = "1.5.5"
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.15", features =["xxh64"] }
image = "0.25.9"
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["json", "query"] }
mpd_client = "1.4.1"
indicatif = "0.18.4"
indexmap = { version = "2.13.0", features = ["serde"] }
notify = "8.2.0"
rand = "0.10.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
fast_image_resize = "6.0.0"
thiserror = "2.0.18"
lava_torrent = "0.9"
sha1 = "0.10"
regex = "1.11.1"
globset = "0.4.18"
