[package]
name = "palette_extraction"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
clap = { version = "4.6.0", features = ["derive"] }
glow = "0.17.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
image = "0.25.10"
kdtree = "0.8.0"
kmeans_colors = "0.7.1"
minifb = "0.28.0"
palette = "0.7.6"
rand = { version = "0.10.0", features = ["std", "std_rng"] }
rand_distr = "0.6.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
winit = "0.30.13"
